--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,27 @@ version: '3.3'
 
 services:
   backend:
-    image: take-some-rest-backend
+    image: backend
     build: ./backend
-    container_name: take-some-rest-backend
+    container_name: backend
     restart: always
     ports:
       - 5000:5000
+    networks:
+      - take-some-rest
 
   frontend:
-    image: take-some-rest-frontend
+    image: frontend
     build: ./frontend
-    container_name: take-some-rest-frontend
+    container_name: frontend
     restart: always
+    depends_on:
+      - backend
     ports:
       - 3000:3000
+    networks:
+      - take-some-rest
+
+networks:
+  take-some-rest:
+    external: true
